--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,20 @@ yarn-error.log*
 /dist/*
 
 /.idea/*
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# Linux
+*~
+
+# 环境配置文件
+*.env
+*.env.*
+
+# 密钥文件
+*.pem
+*.key
