--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "tsc",
+    "build-dev": "cp src/config/.env.dev ./dist/config/.env && tsc",
     "dev": "ts-node-dev --respawn src/app.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
+    "date-and-time": "^3.6.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
